K8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temp-app-service
  namespace: temp-app
spec:
  type: ClusterIP
  selector:
    app: temp-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
